File Field 0.9.9 | Changes

» misc
 | add param to output tag, show = filename
 | updates for SAEF compatibility in IE7/8
 | path bugfix when operating in sub-directory
 | improved error reporting/message when upload path is invalid