@@ -5,3 +5,7 @@ File Field 0.9.9 | Changes
  | updates for SAEF compatibility in IE7/8
  | path bugfix when operating in sub-directory
  | improved error reporting/message when upload path is invalid
+ 
+» preview
+ | selecting existing image from drop-down will load thumbnail preview for visual reference
+ |- when generating file list for existing files, add-on will also create thumbnail if one doesn't exist
